fixed blurry view on SR w/ chrome and edge

--- a/src/styles/Content.css
+++ b/src/styles/Content.css
@@ -12,9 +12,14 @@
 
   @media (max-width: 1000px) {
     .content {
-      width: 92%;
-      height: 85vh;
-      border-radius: 10px;
-      overflow: hidden;
+      width: 100%;
+      position: relative;
+      left: 0%;
+      top: 0%;
+      transform: translate(0%, 0%);
+      box-shadow: none;
+      
     }
+
+  
   }
