--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -116,8 +116,8 @@ font-weight: bold;
     height: 40px;
     line-height: 40px;
     font-size: 18px;
-    font-weight: bold;
-    color: #00b0b3d8;
+    cursor: pointer;
+    color: #272727d8;
     padding-right: 1rem;
     margin: 0;
     float: right;
